--- a/style.css
+++ b/style.css
@@ -3,3 +3,49 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  padding: 10;
+}
+
+figcaption {
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  text-align: center;
+  width: 100%;
+}
+
+#details > div {
+  display: block;
+  float: left;
+}
+
+#details div {
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
+
+
